# n8n_founderstories

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  VENV_AUTO_ACTIVATION_GUIDE.md  benchmark_google_places.py  benchmark_places_text_queries.py  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
src/n8n_founderstories/: __main__.py  main.py
src/n8n_founderstories/api/v1/: __init__.py  deps.py  email_extractor.py  google_maps.py  google_search.py  hunter.py  jobs.py  mailer.py  master.py  prompt.py  router.py  search_plan.py  web_scraper.py
src/n8n_founderstories/core/: config.py  db.py  errors.py  logging.py
src/n8n_founderstories/core/logging/: __init__.py  live_status.py  progress.py  setup.py  tags.py
src/n8n_founderstories/core/utils/: __init__.py  async_net.py  collections.py  domain.py  domain_eligibility.py  email.py  llm_selection.py  net.py  sheets_a1.py  text.py
src/n8n_founderstories/exportsv2/: __init__.py  base_writer.py  formatting.py  writer.py
src/n8n_founderstories/services/: background_jobs.py  storage.py
src/n8n_founderstories/services/company_enrichment/: models.py  repos.py  runner.py
src/n8n_founderstories/services/database/: config.py  connection.py  db.py  sheets_parity.py
src/n8n_founderstories/services/dispatcher/: __init__.py  web_scraper_enrichment.py
src/n8n_founderstories/services/embeddings/: industry_index.py  match_industry.py  test_match.py
src/n8n_founderstories/services/enrichment/: __init__.py  models.py
src/n8n_founderstories/services/exports/: __init__.py  sheets.py  (+9 more)
(+318 files in other folders)
