[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n8n-founderstories"
version = "0.1.0"
description = "Backend for N8N Founder Stories automation"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

